Created productstorage package, added function to grouping products by daysToSpoilAfterOpening with tests